# searchserver

./: CHANGELOG.md  README.md  searchserver.cabal
app/: Main.hs
