cabal-version:      2.4
name:               searchserver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Greg
maintainer:         gb@example.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable searchserver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , scotty
                    , regex-compat
                    , directory
                    , filepath
                    , regexpr
                    , aeson
                    , HsYAML-aeson
                    , text
                    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
